--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,8 @@
 
 
 # tmux display things in 256 colors
-set -g default-terminal "tmux-256color"
+#set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color-italic"
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 set -g history-limit 20000
@@ -9,13 +10,20 @@ set -g history-limit 20000
 # automatically renumber tmux windows
 set -g renumber-windows on
 
-# unbind default prefix and set it to Ctrl+z
+# unbind default prefix and set it to Ctrl+x
 unbind C-b
-set -g prefix C-z
+set -g prefix C-x
 bind C-x send-prefix
 
 # split window and fix path for tmux 1.9
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-source-file ~/dotfiles/tmux/themes/bubbles.conf
+# r to reread conf
+bind r source-file ~/.tmux.conf
+
+# enable mouse control
+set -g mouse on
+
+# make tmux look nice
+source-file ${HOME}/dotfiles/tmux/plugins/tmux-themepack/powerline/default/green.tmuxtheme
